Fixed Z-index

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -84,6 +84,7 @@ td {
 .top-wrapper .right-header {
 /*    border: solid #babdb6 1px;*/
     position: absolute;
+    z-index: 6;
     right: 50px;
     top: auto;
     bottom: -1em;
